# MakeFinalProject-main

./: .env  .gitignore  README.md  requirements.txt
backend/app/: config.py  database.py  main.py  pyproject.toml
backend/app/core/: database.py
backend/app/db/crud/: __init__.py  diary.py  humid_info.py  img_address.py  pest_wiki.py  plant_wiki.py  user.py  user_plant.py
backend/app/db/models/: diary.py  humid_info.py  img_address.py  pest_wiki.py  plant_wiki.py  user_plant.py  users.py
backend/app/db/schemas/: __init__.py  common.py  diary.py  humid_info.py  img_address.py  pest_wiki.py  plant_wiki.py  user.py  user_plant.py
backend/app/routers/: auth.py  dashboard.py  images.py  plants.py  users.py
backend/app/services/: auth_service.py  dashboard_service.py  image_service.py  plants_service.py  storage.py  users_service.py
backend/app/utils/: errors.py  pagination.py  security.py  token_blacklist.py  weather_client.py
